# mpc-datagen

./: .gitignore  README.md  acados_install.sh  pyproject.toml
.github/: copilot-instructions.md
examples/double_integrator/: model.py
scripts/: plot_cost_offsets.py
src/mpc-data-generator/: __init__.py  extractor.py  generate.py  mpc_data.py  mpc_solve.py
src/mpc-data-generator/verification/: __init__.py  certification.py  gruene.py  reports.py  verification.py
src/mpc-datagen/: __init__.py  linalg.py  mpc_data.py
src/mpc-datagen/generation/: generate.py  mpc_solve.py
src/mpc-datagen/verification/: certification.py  render.py  verification.py
src/mpc_datagen/: __init__.py  extractor.py  linalg.py  mpc_data.py  package_logger.py  plots.py
src/mpc_datagen/generation/: __init__.py  generate.py  mpc_solve.py  sampler.py
src/mpc_datagen/verification/: __init__.py  certification.py  gruene.py  render.py  reports.py  roa.py  verification.py
tests/: acados_solver_example.py  test_extractors.py  test_grune_no_terminal_certificate.py  test_lyap_certification.py
