[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mpc_datagen"
version = "0.1.0"
description = "Generates an mpc dataset for e.g. imitation learning with acados."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "tqdm",
    "casadi",
    "h5py",
    "rich"
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
